File ingest scheduler and decorator